# slack-foosball

./: .gitignore  README.md  pyproject.toml  run.py
slack_foosball/: app.py  crud.py  database.py  models.py
