[tool.poetry]
name = "slack-foosball"
version = "0.1.0"
description = ""
authors = ["Ben Carley <ben.lg.carley@gmail.com"]
readme = "README.md"
packages = [{include = "slack_foosball"}]

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.16.1"
SQLAlchemy = "2.0.0rc1"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
